[package]
name = "akd-soem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
ctrlc = "3.2.1"
env_logger = "0.9.0"
log = "0.4.14"
soem = { version = "0.3.0", path = "../soem-rs" }
parking_lot = "0.12.0"
